spade-tests/src/snapshots/spade_tests__typeinference__recursive_tuple_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    decl x;
    let x = (x, bool);
}


error: Type bool is used as a value
  ┌─ testinput:3:17
  │
3 │     let x = (x, bool);
  │                 ^^^^ bool is a type
